[package]
name = "arbitrary-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.16.0"
anyhow = "*"
ethereum-trie = "0.5.0"
ethereum-bigint = "0.2.9"

[dev-dependencies]
flipper = { path = "../contracts/flipper", artifact = "cdylib", target = "wasm32-unknown-unknown" }
