[package]
name = "arbitrary-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.16.0"
anyhow = "*"
ethereum-trie = "0.5.0"
ethereum-bigint = "0.2.9"
sha3 = "0.6.0"
hex = "0.4.2"
libc = "0.2.132"
once_cell = "1.14"

